# ppopgipang-vision-auto-labeler

./: .gitignore  GPU_OPTIMIZATION_ANALYSIS.md  PIPELINE_VERIFICATION_REPORT.md  README.md  requirements.txt  test_detect_pipeline_verification.py  test_gpu_integration.py  verify_pipeline_flow.py
notebooks/: colab_pipeline.ipynb  yolov8_training.ipynb
scripts/: verify_crawlers.py
vision_pipeline/: .env.example  .gitignore  config.py  pyproject.toml
vision_pipeline/configs/: character_labels.yaml  detector.yaml  filter.yaml  llm.yaml  pipeline.yaml  test_classifier_pipeline.yaml
vision_pipeline/domain/: bbox.py  image.py  job.py  label.py
vision_pipeline/modules/clip/: candidate_generator.py
vision_pipeline/modules/crawler/: base.py  google.py  naver.py  utils.py
vision_pipeline/modules/detector/: bbox_utils.py  grounding_dino.py  yolo_world.py
vision_pipeline/modules/filter/: base.py  classifier.py  dedup.py  quality.py
vision_pipeline/modules/llm/: labeler.py  prompt_templates.py  verifier.py
vision_pipeline/modules/storage/: image_store.py  metadata_store.py
vision_pipeline/pipelines/: base.py  crawl_pipeline.py  detect_pipeline.py  filter_pipeline.py  verify_pipeline.py
vision_pipeline/scripts/: crawl_only.py  reverify_failed.py  run_pipeline.py
vision_pipeline/services/: job_service.py  metrics.py  pipeline_runner.py
vision_pipeline/tests/: manual_test_classifier.py  manual_test_detector.py  manual_test_llm.py  test_crawler_manual.py
